--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,59 +1,109 @@
 
-*{
-margin: 0;
-padding: 0;
+* {
+    margin: 0;
+    padding: 0;
 
 }
-.navbar
-{
+
+.navbar {
     display: flex;
     align-items: center;
     position: relative;
-    
+
 }
 
-.navbar::before{
+.navbar::before {
     content: "";
     background-color: black;
     position: absolute;
     height: 100%;
     width: 100%;
-    opacity: 0.5;
+    opacity: 0.95;
     z-index: -1;
 }
 
-.logo
-{
- margin: 8px 8px;
+.logo {
+    margin: 8px 8px;
 }
-.logo img
-{
+
+.logo img {
     height: 3.3rem;
- margin: 5px 5px;
+    margin: 5px 5px;
 
 }
-.navbar ul
-{
+
+.navbar ul {
     display: flex;
 
-    
+
 }
-.navbar ul li 
-{
+
+.navbar ul li {
     list-style: none;
     font-size: 1.5rem;
 }
-.navbar ul li a
-{
+
+.navbar ul li a {
     display: block;
-    color: white; 
+    color: white;
     text-decoration: none;
-    padding:3px 22px;
+    padding: 3px 22px;
     border-radius: 20px;
     font-family: 'Roboto', sans-serif;
 }
-.navbar ul li a:hover
-{
+
+.navbar ul li a:hover {
     color: black;
     background-color: white;
+}
+
+.home {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    padding: 3px 200px;
+    justify-content: center;
+    align-items: center;
+}
+
+.home::before {
+    content: "";
+    background: url(../Images/Main-b-images/food\ img2.jpg) no-repeat center center/cover;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0.88;
+    z-index: -1;
+
+
+}
+
+.p-heading {
+    margin: 15px;
+    font-size: 3.5rem;
+    color: rgb(0, 0, 0);
+    /* text-transform: uppercase; */
+    font-weight: bolder;
+   
+}
+
+.home p {
+    color: black;
+    text-align: center;
+    font-size: 1.3rem;
+    font-weight: 500;
+    font-family: 'Anton', sans-serif;
+font-family: 'Mukta', sans-serif;
+font-family: 'Rubik', sans-serif;
+}
+
+.button{
+    padding: 6px 15px;
+    margin: 15px;
+    border: 2px solid black;
+    background-color:darkgrey;
+    border-radius: 10px;
+    font-size:1.3rem;
+    cursor: pointer;
 }
