--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,10 +63,11 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    height: 400px;
+    height: 413px;
     padding: 3px 200px;
     justify-content: center;
     align-items: center;
+    
 }
 
 .home::before {
@@ -75,7 +76,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 68%;
+    height: 500px;
     width: 100%;
     opacity: 0.88;
     z-index: -1;
@@ -149,4 +150,31 @@ font-family: 'Rubik', sans-serif;
     font-family: 'Chakra Petch', sans-serif;
     margin: 20px;
     font-size: 2.8rem;
+}
+/* client section */
+.clients-section
+{
+    height: 400px;
+    position: relative;
+}
+.clients-section::before{
+    content: "";
+    position: absolute;
+    background: url(../Images/Main-b-images/food\ img2.jpg);
+    width: 100%;
+    height: 70%;
+    z-index: -1;
+    opacity: 0.2;
+}
+.clients{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.clients img{
+    height: 110px;
+}
+.client-item
+{
+    padding: 60px;
 }
