Created and designed contact-us and footer section of the website

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,10 @@
-
 * {
     margin: 0;
     padding: 0;
 
 }
 
+/* navigation bar and intro section */
 .navbar {
     display: flex;
     align-items: center;
@@ -67,7 +67,7 @@
     padding: 3px 200px;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 .home::before {
@@ -84,14 +84,7 @@
 
 }
 
-.p-heading {
-    margin: 20px;
-    font-size: 3.5rem;
-    color: rgb(230, 230, 230);
-    /* text-transform: uppercase; */
-    font-weight: bolder;
-   
-}
+
 
 .home p {
     color: rgb(219, 214, 214);
@@ -99,82 +92,160 @@
     font-size: 1.3rem;
     font-weight: 500;
     font-family: 'Anton', sans-serif;
-font-family: 'Mukta', sans-serif;
-font-family: 'Rubik', sans-serif;
+    font-family: 'Mukta', sans-serif;
+    font-family: 'Rubik', sans-serif;
 }
 
-.button{
+.button {
     padding: 6px 15px;
     margin: 15px;
     border: 2px solid black;
-    background-color:darkgrey;
+    background-color: darkgrey;
     border-radius: 10px;
-    font-size:1.3rem;
+    font-size: 1.3rem;
     cursor: pointer;
 }
-.center
-{
+
+.center {
     text-align: center;
 }
 
-.services
-{
+.services {
     display: flex;
     margin: 34px;
 }
-.box
-{
+
+.box {
     border: 3px solid brown;
     margin: 5px;
     padding: 10px;
     border-radius: 20px;
     background-color: #ececec;
 }
-.box img
-{
+
+.box img {
     height: 160px;
     margin: auto;
     display: block;
     border-radius: 10px;
     width: 220px;
 }
-.s-heading
-{
-    font-family: 'Arimo', sans-serif;
-     margin: 15px;
-     font-size: 1.8rem;
 
-}
-.p-heading1
-{
-    font-family: 'Chakra Petch', sans-serif;
-    margin: 20px;
-    font-size: 2.8rem;
-}
 /* client section */
-.clients-section
-{
-    height: 400px;
+.clients-section {
+    height: 335px;
     position: relative;
 }
-.clients-section::before{
+
+.clients-section::before {
     content: "";
     position: absolute;
-    background: url(../Images/Main-b-images/food\ img2.jpg);
+    background: url(../Images/Main-b-images/food\ img2.jpg) no-repeat center center/cover;
     width: 100%;
-    height: 70%;
+    height: 100%;
     z-index: -1;
     opacity: 0.2;
 }
-.clients{
+
+.clients {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.clients img{
+
+.clients img {
     height: 110px;
 }
-.client-item
-{
+
+.client-item {
     padding: 60px;
+}
+
+/* contact section */
+#contact {
+    position: relative;
+    height: 520px;
+    margin: 2px 0px 0px 0px;
+
+}
+
+#contact::before {
+    content: "";
+    position: absolute;
+    background: url(../Images/Main-b-images/contact-us.jpg) no-repeat center center/cover;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    opacity: 0.8;
+}
+
+.contact-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 15px;
+    flex-direction: column;
+}
+
+.contact-box input,
+.contact-box textarea {
+    width: 100%;
+    padding: .05rem;
+    padding: .5rem;
+    border-radius: 7px;
+}
+
+.contact-box form {
+    width: 50%;
+}
+
+.contact-box label {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.send {
+    padding: 6px 20px;
+    margin: 15px;
+    color: white;
+    border: 2px solid black;
+    background-color: rgb(167, 22, 22);
+    border-radius: 5px;
+    font-size: 1.3rem;
+    cursor: pointer;
+}
+
+/* footer */
+footer {
+    background-color: black;
+    color: white;
+    padding: 20px;
+
+}
+
+/* utility classes */
+.s-heading {
+    font-family: 'Arimo', sans-serif;
+    margin: 15px;
+    font-size: 1.8rem;
+
+}
+
+.p-heading1 {
+    font-family: 'Chakra Petch', sans-serif;
+    margin: 20px;
+    font-size: 2.8rem;
+}
+
+.p-heading {
+    margin: 20px;
+    font-size: 3.5rem;
+    color: rgb(230, 230, 230);
+    /* text-transform: uppercase; */
+    font-weight: bolder;
+}
+
+.p-heading2 {
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 2.8rem;
 }
